--- a/.travis.yml
+++ b/.travis.yml
@@ -38,24 +38,16 @@ script:
   # Increment version in mix.exs
   - ./bin/ci/version-increment.sh
   # Install dependencies
-  - mix deps.get
-  # Run all tests except pending ones
-  - mix test --exclude pending --trace
-  # Submit code coverage report to Coveralls
-  # Add --pro if you using private repo.
-  - mix coveralls.travis --exclude pending
-  # Run static code analysis
-  - mix credo --strict
-  # Check code style
-  - mix dogma
+  - mix deps.get || travis_terminate 1
+  - ./bin/mix_tests.sh || travis_terminate 1
   # Build Docker container
   - ./bin/build.sh || travis_terminate 1
   # Initialize DB for Docker container
-  - MIX_ENV=dev mix ecto.setup
+  - MIX_ENV=dev mix ecto.setup 
   # Run Docker container
   - sudo ./bin/start.sh || travis_terminate 1
   # Run acceptance tests on Docker container
-  - "CONTAINER_HTTP_HOST=localhost CONTAINER_HTTP_PORT=4000 mix test test/acceptance"
+  - "CONTAINER_HTTP_HOST=localhost CONTAINER_HTTP_PORT=4000 mix test test/acceptance" 
   # Submit Docker container to Docker Hub and create GitHub Release by pushing tag with changelog
   - ./bin/ci/push.sh || travis_terminate 1
   # CD to Dev
