--- a/.env
+++ b/.env
@@ -18,12 +18,12 @@ DB_PASSWORD=postgres
 DB_HOST=travis
 DB_PORT=5432
 
-# Seed database settings
-SEED_DB_NAME=seed_dev
-SEED_DB_USER=postgres
-SEED_DB_PASSWORD=postgres
-SEED_DB_HOST=travis
-SEED_DB_PORT=5432
+# Block database settings
+BLOCK_DB_NAME=seed_dev
+BLOCK_DB_USER=postgres
+BLOCK_DB_PASSWORD=postgres
+BLOCK_DB_HOST=travis
+BLOCK_DB_PORT=5432
 
 # Migrate DB on start
 DB_MIGRATE=true
