[minor] insert events on medication_dispense status change

--- a/.env
+++ b/.env
@@ -25,6 +25,13 @@ BLOCK_DB_PASSWORD=postgres
 BLOCK_DB_HOST=travis
 BLOCK_DB_PORT=5432
 
+# Event manager database settings
+EVENT_MANAGER_NAME=event_manager_dev
+EVENT_MANAGER_USER=postgres
+EVENT_MANAGER_PASSWORD=postgres
+EVENT_MANAGER_HOST=travis
+EVENT_MANAGER_PORT=5432
+
 # Migrate DB on start
 DB_MIGRATE=true
 
