Create mr date validations#3704 (#152)

--- a/.env
+++ b/.env
@@ -44,3 +44,5 @@ BLOCK_CREATION_SCHEDULE="0 0 * * *"
 BLOCK_VALIDATION_SCHEDULE="0 5 * * *"
 
 KAFKA_BROKERS=travis:9092
+POD_A_RECORD=127.0.0.1
+NAMESPACE=ops
