feat: kaffe library is now used instead of kafka_ex (#190)

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,8 @@ before_install:
   - sudo apt-get install jq
   - curl -s https://raw.githubusercontent.com/edenlabllc/ci-utils/umbrella_v2/init-db.sh -o init-db.sh; sudo sh ./init-db.sh
   - curl -s https://raw.githubusercontent.com/edenlabllc/ci-utils/umbrella_v2/init-kafka.sh -o init-kafka.sh; sudo sh ./init-kafka.sh
+  # create kafka topics
+  - kafka/bin/kafka-topics.sh --create --partitions 1 --replication-factor 1 --zookeeper localhost:2181 --topic deactivate_declaration_events
 jobs:
   include:
     - stage: "test and build"
