feat: cache list declarations (#208)

--- a/.env
+++ b/.env
@@ -52,3 +52,6 @@ BLOCK_VALIDATION_SCHEDULE="0 5 * * *"
 KAFKA_BROKERS=travis:9092
 POD_A_RECORD=127.0.0.1
 NAMESPACE=ops
+
+# Redis
+REDIS_URI=redis://travis:6379
